feat(user): profile-picture backend done
