# go/api/docs/swagger.json
@@ -1976,6 +1976,51 @@
                 }
             }
         },
+        "/users/photo": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update the profile picture of a user",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update the profile picture of a user",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Photo file",
+                        "name": "photo",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.UserRoleReponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "get": {
                 "security": [
@@ -2634,6 +2679,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "profilePicturePath": {
+                    "type": "string"
+                },
                 "username": {
                     "type": "string"
                 }
@@ -2644,6 +2692,9 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "profilePicturePath": {
+                    "type": "string"
                 },
                 "role": {
                     "$ref": "#/definitions/models.UserRole"
