# go/api/server.go
@@ -157,6 +157,7 @@ func setRoutes() {
 	usersRoutes := router.Group("/users")
 	usersRoutes.POST("", userHandler.Create)
 	usersRoutes.GET("/:id", middlewares.UserIsLogged, userHandler.Get)
+	usersRoutes.PATCH("/photo", middlewares.UserIsLogged, userHandler.UpdatePhoto)
 
 	tripsRoutes := router.Group("/trips", middlewares.UserIsLogged)
 	tripsRoutes.POST("", tripHandler.Create)
